CHANGE LOG

2018-08-18 AIM Version 2.1 for BATTLETECH 1.1.2

* Big: Remove support code for game version 1.1.1 and before.
* New: Change Line of Fire colours by attack direction.
* New: Change Facing Indicators colours.
* New: Change Floating Armor Bar colours.
* New: Customise list and order of ranged attack modifiers. (melee modifiers already done in 2.0)
* New: Directional Attack Modifier - get accuracy bonus for attacking from side or rear.
* New: Factor in self movement accuracy modifier during action plan.
* New: After-Jump to-hit modifier.
* New: Show ammo count in paper doll tooltip.
* New: Balanced ammo usage to reduce chance of ammo explosion.
* New: Auto Jettison Ammo when they are useless.
* New: Skip crit roll on dead units.
* New: Attack Log now logs Round and Phase.
* Mod: New logging code that formats and write logs in the background and will not cause the game to lag.
* Mod: Attack logs are now automatically archived, with a total size limit also managed in the background.
* Fix: Hit Location fix now modifies hit tables instead of totally overwriting GetHitLocation.
* Fix: A few resources are now cleared on combat end to reduce memory leak.
* Fix: Precise settings to kill imperfect conversion such as 0.800000011920929 and 3.2999999523162842.

2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2

* Big: Settings migrated to settings.json and is automatically updated by the mod.
* New: Unlock hit accuracy's 5% step and make odd gunnery useful.
* New: Show current and projected heat and stability number in selection panel and target panel.
* New: Fix and allow to-hit modifier to be a net bonus, instead of capping at no penalty.
* New: Allow height modifier to be net penalty, instead of capping at no bonus.
* New: Display base hit chance of ranged and melee attack and the relevant stat.
* New: Fix Multi-Target back out.
* New: Fix rear armour structure display, and show structural damage through armour.