@@ -2,8 +2,8 @@
    "Name" : "AIM: Attack Improvement Mod",
    "Enabled" : true,
 
-   "Version" : "2.2 development",
-   "Description" : "Fix, enhance, and upgrade various aspects of attacking, from Line of Sight to Hit Distribution. Each feature can be configured individually.",
+   "Version" : "2.2",
+   "Description" : "BATTLETECH 1.2.0. Fix, enhance, and upgrade the attack experience, from Line of Sight to Hit Distribution. Each feature can be configured individually.",
    "Author" : "Sheepy",
    "Website" : "https://github.com/Sheep-y/Attack-Improvement-Mod/",
    "Contact" : "your.sheepy@gmail.com",
