@@ -1,8 +1,15 @@
 CHANGE LOG
 
+2018-08-22 AIM Version 2.2 for BATTLETECH 1.2.0
+
+* Big: Updated for 1.2.0. Incompatible with game version 1.1.2 and before.
+* Big: Vehicle called shot fix removed, because fixed in 1.2.0 and mod is not backward compatible due to game update.
+* Fix: LOS of unknown targets always use front colour.
+* Mod: Better compatibility with mods that change explosion rules.
+
 2018-08-18 AIM Version 2.1 for BATTLETECH 1.1.2
 
-* Big: Remove support code for game version 1.1.1 and before.
+* Big: Updated for 1.1.2. Incompatible with game version 1.1.1 and before.
 * New: Change Line of Fire colours by attack direction.
 * New: Change Facing Indicators colours.
 * New: Change Floating Armor Bar colours.
